--- a/assets/locales/ru.json
+++ b/assets/locales/ru.json
@@ -4,5 +4,17 @@
     "info2": "Безопасное такси для женщин и детей.",
     "skip": "Пропустить",
     "start": "Начать",
-    "next": "Следующий"
+    "next": "Следующий",
+    "continue": "Продолжить",
+    "create": "Cоздать Профиль",
+    "name": "Полное имя",
+    "birthdate": "Дата рождения",
+    "number": "Номер телефона",
+    "signup": "Зарегистрироваться",
+    "enteranumber": "Введите свой номер\nтелефона для регистрации!",
+    "phoneinputlabel": "Номер телефона",
+    "registryinfo1": "Код подтверждения ",
+    "registryinfo2": "отправлено на номер  \n",
+    "registryinfo3": "\nВремя приема:\n",
+    "registryrepeat": "Повторно отправить код подтверждения"
 }
