--- a/assets/locales/uz.json
+++ b/assets/locales/uz.json
@@ -16,5 +16,8 @@
     "registryinfo1": "Tasdiqlash kodi ",
     "registryinfo2": "\nraqamiga yuborildi.",
     "registryinfo3": "\nQabul qilish vaqti:\n",
-    "registryrepeat": "Kod qayta yurborilsin"
+    "registryrepeat": "Kod qayta yurborilsin",
+    "congratulations": "Tabriklaymiz!",
+    "you_have_successfully_registered": "Siz muvaffaqiyatli ro'yhatdan o'tdingiz",
+    "my_shipping_adress": "Jo'natish manzilim"
 }
