--- a/assets/locales/ru.json
+++ b/assets/locales/ru.json
@@ -37,5 +37,8 @@
     "language":"Язык",
     "night_mode":"Ночной режим",
     "completed":"Завершено >",
-    "cancelled":"Отменено >"
+    "cancelled":"Отменено >",
+    "sign_out":"Выйти",
+    "sure":"Вы покидаете нас?",
+    "cancel": "Отменить"
 }
