--- a/assets/locales/uz.json
+++ b/assets/locales/uz.json
@@ -27,15 +27,18 @@
     "where_to_go": "Qayerga borasiz?",
     "enter_an_adress": "Manzilni kiriting",
     "location": "Joylashuv",
-    "hello":"Salom ",
-    "save_location":"Joyi saqlash",
-    "distance":"Masofa",
-    "payment":"Yo'l haqqi",
-    "save":"Saqlash",
-    "notifications":"Bildirishnomalar",
-    "security":"Xavfsiz",
-    "language":"Til",
-    "night_mode":"Tunggi rejim",
-    "completed":"Bajarild >",
-    "cancelled":"Bekor qilindi >"
+    "hello": "Salom ",
+    "save_location": "Joyi saqlash",
+    "distance": "Masofa",
+    "payment": "Yo'l haqqi",
+    "save": "Saqlash",
+    "notifications": "Bildirishnomalar",
+    "security": "Xavfsiz",
+    "language": "Til",
+    "night_mode": "Tunggi rejim",
+    "completed": "Bajarild >",
+    "cancelled": "Bekor qilindi >",
+    "sign_out": "Chiqish",
+    "sure": "Nahotki bizni tark etayapsiz?",
+    "cancel": "Bekor qilish"
 }
