get verification code

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -8,7 +8,7 @@
     "continue": "Continue",
     "create": "Create Profile",
     "name": "Full name",
-    "birthdate": "Date of birth",
+    "gender": "Gender",
     "number": "Phone number",
     "signup": "Sign Up",
     "enteranumber": "Enter your phone\nnumber to register!",
