--- a/assets/locales/ru.json
+++ b/assets/locales/ru.json
@@ -8,7 +8,7 @@
     "continue": "Продолжить",
     "create": "Cоздать Профиль",
     "name": "Полное имя",
-    "birthdate": "Дата рождения",
+    "gender": "Пол",
     "number": "Номер телефона",
     "signup": "Зарегистрироваться",
     "enteranumber": "Введите свой номер\nтелефона для регистрации!",
