--- a/assets/locales/uz.json
+++ b/assets/locales/uz.json
@@ -8,7 +8,7 @@
     "continue": "Davom etish",
     "create": "Profil Yaratish",
     "name": "F.I.SH.",
-    "birthdate": "Tug'ilgan sana",
+    "gender": "Jins",
     "number": "Telefon raqam",
     "signup": "Ro'yxatdan o'tish",
     "enteranumber": "Ro'yxatdan o'tish uchun\ntelefon raqamingizni kiriting!",
