Log out function added and some changes made

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -27,19 +27,20 @@
     "where_to_go": "Where to go?",
     "enter_an_adress": "Enter the address",
     "location": "Location",
-    "hello":"Hello ",
-    "save_location":"Save location",
-    "distance":"Distance",
-    "payment":"Payment",
-    "save":"Save",
-    "notifications":"Notifications",
-    "security":"Security",
-    "language":"Language",
-    "night_mode":"Night mode",
-    "completed":"Completed >",
-    "cancelled":"Cancelled >",
-    "sign_out":"Sign Out",
-    "sure":"Are you leaving us?",
-    "cancel": "Cancel"
-
+    "hello": "Hello ",
+    "save_location": "Save location",
+    "distance": "Distance",
+    "payment": "Payment",
+    "save": "Save",
+    "notifications": "Notifications",
+    "security": "Security",
+    "language": "Language",
+    "night_mode": "Night mode",
+    "completed": "Completed >",
+    "cancelled": "Cancelled >",
+    "sign_out": "Sign Out",
+    "sure": "Are you leaving us?",
+    "cancel": "Cancel",
+    "male": "Male",
+    "female": "Female"
 }
