--- a/assets/locales/ru.json
+++ b/assets/locales/ru.json
@@ -27,18 +27,20 @@
     "where_to_go": "Куда мы едем?",
     "enter_an_adress": "Введите адрес",
     "location": "Местоположение ",
-    "hello":"Привет ",
-    "save_location":"Сохранить местоположение",
-    "distance":"Расстояние",
-    "payment":"Плата за проезд",
-    "save":"Сохранить",
-    "notifications":"Уведомления",
-    "security":"Безопасность",
-    "language":"Язык",
-    "night_mode":"Ночной режим",
-    "completed":"Завершено >",
-    "cancelled":"Отменено >",
-    "sign_out":"Выйти",
-    "sure":"Вы покидаете нас?",
-    "cancel": "Отменить"
+    "hello": "Привет ",
+    "save_location": "Сохранить местоположение",
+    "distance": "Расстояние",
+    "payment": "Плата за проезд",
+    "save": "Сохранить",
+    "notifications": "Уведомления",
+    "security": "Безопасность",
+    "language": "Язык",
+    "night_mode": "Ночной режим",
+    "completed": "Завершено >",
+    "cancelled": "Отменено >",
+    "sign_out": "Выйти",
+    "sure": "Вы покидаете нас?",
+    "cancel": "Отменить",
+    "male": "Мужчина",
+    "female": "Женщина"
 }
